Include cost information in adaptive routing
Co-authored-by: Erik Osheim <erik@signal.org>
Co-authored-by: erik-signal <113138376+erik-signal@users.noreply.github.com>
Co-authored-by: Jon Chambers <63609320+jon-signal@users.noreply.github.com>